
5.1.0 -> 5.2a0:
    - jbj: rpmwget: turn on --limit-rate. overdamped afaict, todo++ ...
    - jbj: rpmwget: move most of the calculations into the notify callback.
    - jbj: rpmurl: add send/recv/total accumulators.
    - jbj: add --whatneeds/--needswhat popt aliases.
    - jbj: make gzdio.c standalone.
    - rpm.org: Make verifyAttrs and virtualFileAttributes static.
    - rpm.org: Teach Fflush about lzdio.
    - jbj: add _flush to FDIO_t, make bzdio.c standalone.
    - jbj: rpmio: start deconstructing the ancient URL callback.
    - jbj: rpmwget: ... display connection state in wgetNotify.
    - jbj: rpmdav: pass the neon callback thru (*u->notify) to ...
    - jbj: rpmurl: devise a passthru connection progress callback.
    - jbj: rpmwget: preliminaries for -o/-a output file logging.
    - jbj: rpmwget: wire up --quota.
    - jbj: rpmsw: change bytes accumulator to unsigned long long.
    - jbj: rpmwget: wire up --limit-rate. more to do ...
    - jbj: rpmwget: wire up --progress; only "bar|none" args implemented.
    - jbj: rpmwget: add rate/eta calculation to progress bar and logging.
    - jbj: rpmdav: prepare to tie wget logging into davNotify transitions.
    - at: rpmfi: new function: size_t rpmfiFNMaxLen(rpmfi).
    - at: rpmbuild: check for unpackaged subdirectories.
    - jbj: fix: resurrect cpuinfo() probe, hack-o-rounds for both /proc & libio.
    - jbj: rpmio: remove fdSize, rewrite rpmioSlurp to use Fstat(2) instead.
    - jbj: rpmdav: display connection state transitions while debugging.
    - jbj: rpmdav: add davDisconnect() to clean active requests before caching.
    - jbj: rpmwget: add a progress bar. no I/O rates or ETA yet.
    - jbj: install: retry callback reopen URI once to handle timeouts.
    - jbj: pkgio: use Fstat(2) for size check. more to do still ...
    - jbj: psm: fix: avoid lazy Stat(2) on active URI request.
    - jbj: rpmrpc: add Fstat(2) to map URI info into header statbuf early.